# tfg-rag

./: .gitignore  bbdd.py  comprobar_chroma.py  informe_calidad_final.json  pyproject.toml  resultados_laboratorio.json
Data/knowledge_base/: DataSharingKB.md
src/Data/database/chroma_db_prueba/: chroma.sqlite3
src/asistente_tfg/: api_orquestador.py  interfaz_web.py
src/asistente_tfg/scripts/: ingesta.py  ingesta_prods.py
tests/: auditoria.py  benchmark_calidad.py  benchmark_rendimiento.py  evaluar_enrutador.py
